[gd_scene load_steps=3 format=3 uid="uid://c1ybglxewi2d4"]

[ext_resource type="Script" path="res://main/mainmenu.gd" id="1_ioqhn"]
[ext_resource type="VideoStream" path="res://main/rickroll.ogv" id="2_itsgo"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ioqhn")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Demo"
horizontal_alignment = 1

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "start"

[node name="Setting" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "setting"

[node name="Esc" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "关机按钮"

[node name="Rickroll" type="VideoStreamPlayer" parent="CenterContainer"]
visible = false
layout_mode = 2
stream = ExtResource("2_itsgo")

[node name="Close" type="Button" parent="CenterContainer/Rickroll"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "X"

[connection signal="button_down" from="CenterContainer/VBoxContainer/Start" to="." method="_on_start_button_down"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/Esc" to="." method="_on_esc_button_up"]
[connection signal="pressed" from="CenterContainer/Rickroll/Close" to="." method="_on_close_pressed"]
